# voxl-mapper

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  coeff_output  install_build_deps.sh  install_on_voxl.sh  make_package.sh
benchmark/: benchmark.csv  vis.py  voxl-mapper.conf
ipk/: .gitignore
ipk/control/: control  postinst
pkg/control/: control  postinst
server/loco_planner/: CMakeLists.txt
server/loco_planner/include/loco_planner/: loco.h  loco_impl.h
server/mav_comm/mav_msgs/: CMakeLists.txt
server/mav_comm/mav_msgs/include/mav_msgs/: common.h  conversions.h  default_values.h  eigen_mav_msgs.h  mav_msgs.h
server/mav_comm/mav_planning_msgs/: CMakeLists.txt
server/mav_comm/mav_planning_msgs/include/mav_planning_msgs/: mav_planning_msgs.h
server/mav_local_planner/: CMakeLists.txt
server/mav_local_planner/include/mav_local_planner/: conversions.h  mav_local_planner.h
server/mav_local_planner/src/: conversions.cpp  mav_local_planner.cpp
server/mav_path_smoothing/: CMakeLists.txt
server/mav_path_smoothing/include/mav_path_smoothing/: loco_smoother.h  path_smoother_base.h  polynomial_smoother.h  velocity_ramp_smoother.h
server/mav_path_smoothing/src/: loco_smoother.cpp  path_smoother_base.cpp  polynomial_smoother.cpp  velocity_ramp_smoother.cpp
server/mav_planning_common/: CMakeLists.txt
server/mav_planning_common/include/mav_planning_common/: color_utils.h  physical_constraints.h  semaphore.h
server/mav_planning_common/src/: color_utils.cpp  visibility_resampling.cpp  yaw_policy.cpp
server/mav_trajectory_generation/: CMakeLists.txt
server/mav_trajectory_generation/include/mav_trajectory_generation/: feasibility_analytic.h  feasibility_base.h  input_constraints.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear.h  polynomial_optimization_nonlinear_impl.h  rpoly_ak1.h  segment.h  timing.h  trajectory.h  trajectory_sampling.h  vertex.h
server/mav_trajectory_generation/src/: polynomial.cpp  rpoly_ak1.cpp  segment.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
server/voxblox_loco_planner/: CMakeLists.txt
server/voxblox_loco_planner/include/voxblox_loco_planner/: goal_point_selector.h  shotgun_planner.h  voxblox_loco_planner.h
server/voxblox_loco_planner/src/: goal_point_selector.cpp  shotgun_planner.cpp  voxblox_loco_planner.cpp
server/voxblox_planning_common/: CMakeLists.txt
server/voxblox_planning_common/include/voxblox_planning_common/: gain_evaluator.h
server/voxblox_planning_common/src/: gain_evaluator.cpp  path_shortening.cpp
server/voxblox_skeleton/: CMakeLists.txt
server/voxblox_skeleton/include/voxblox_skeleton/: nanoflann_interface.h  skeleton_generator.h  skeleton_planner.h  skeletonizer.h  sparse_graph_planner.h
server/voxblox_skeleton/include/voxblox_skeleton/io/: skeleton_io.h
server/voxblox_skeleton/include/voxblox_skeleton/ros/: skeleton_vis.h
server/voxblox_skeleton/src/: skeleton.cpp  skeleton_eval.cpp  skeleton_generator.cpp  skeleton_planner.cpp  skeleton_serialization.cpp  skeletonizer.cpp  sparse_graph_planner.cpp
server/voxblox_skeleton/src/io/: skeleton_io.cpp
server/voxblox_skeleton_planner/: CMakeLists.txt
server/voxblox_skeleton_planner/include/voxblox_skeleton_planner/: skeleton_global_planner.h  skeleton_graph_planner.h
server/voxblox_skeleton_planner/src/: skeleton_global_planner.cpp  skeleton_global_planner_node.cpp  skeleton_graph_planner.cpp
server/voxl-mapper/: CMakeLists.txt  config_file.cc  config_file.h  conversions.h  conversions_inl.h  icp.cc  icp.h  main.cc  mesh_vis.h  obs_pc_filter.cc  obs_pc_filter.h  path_interface.h  path_vis.h  planner_utils.cc  planner_utils.h  ptcloud_vis.h  rc_transform.c  rc_transform.h  rc_transform_ringbuf.c  rc_transform_ringbuf.h  rrt.cc  rrt.h  timing_utils.cc  timing_utils.h  trajectory_interface.h  voxl_mapper.cc  voxl_mapper.h  voxl_planner.cc  voxl_planner.h
server/voxl-mapper/global_planners/: global_planner.h  octree.hpp  rrt_connect.cc  rrt_connect.h  timer.h
server/voxl-mapper/local_planners/: global_smoother.cc  global_smoother.h  local_a_star.cc  local_a_star.h  local_planner.h  simple_follower.cc  simple_follower.h
